[package]
edition = "2021"
name = "dskctrl"
version = "0.1.0"
license = "GPL-3.0-or-later"

[dependencies]
# Basic set
embassy-futures = { version = "0.1.1" }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-time = { version = "0.2", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-stm32 = { version = "0.1.0", features = ["defmt", "time-driver-any", "unstable-pac", "time", "stm32g431cb"] }

# Required if you want to store generic stuff in structs.
embedded-hal-async = { version = "1.0.0-rc.2" }
embedded-hal = { version = "0.2.7" }
embedded-io-async = { version = "0.6.1" }

# Required when not using RTIC
embassy-executor = { version = "0.3.3", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }

# Additional
embassy-usb = { version = "0.1.0", features = ["defmt", "max-interface-count-3"] }
static_cell = { version = "2.0.0", features = ["nightly"]}

defmt = "0.3.5"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.3"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
futures = { version = "0.3.29", default-features = false, features = ["async-await"] }

[patch.crates-io]
# Prev: 5d5cd2371504915a531e669dce3558485a51a2e1
# Prev: 13f050167346ce262ea33c0757496b832c90fa58 (up to 2023.12)
# Cur: 7703f47c1ecac029f603033b7977d9a2becef48c
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "7703f47c1ecac029f603033b7977d9a2becef48c" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "7703f47c1ecac029f603033b7977d9a2becef48c" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "7703f47c1ecac029f603033b7977d9a2becef48c" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "7703f47c1ecac029f603033b7977d9a2becef48c" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "7703f47c1ecac029f603033b7977d9a2becef48c" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "7703f47c1ecac029f603033b7977d9a2becef48c" }

# Tested first: b0da6318f3eaa4a7fa247834ae5d95887c5bcf18


# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-
