[package]
edition = "2024"
name = "io-ctrl"
version = "0.1.0"
license = "GPL-3.0-or-later"
default-run = "ctrl"
default-build = "ctrl"

[features]
default = []

# Selects the CAN bus address of the device (see config.rs)
# Main / gate
bus-addr-gate = []
# main 1st floor
bus-addr-1 = []
# dining room 1st floor
bus-addr-2 = []

# 3 - 9 reserved for 1st floor.

# west 2nd floor
bus-addr-10 = []
# east 2nd floor
bus-addr-11 = []

[dependencies]
# Basic set
embassy-futures = { version = "0.1.2" }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-stm32 = { version = "0.5.0", features = ["defmt", "time-driver-any", "unstable-pac", "time", "stm32g431cb"] }

# Required if you want to store generic stuff in structs.
embedded-hal-async = { version = "1.0.0" }
embedded-hal = { version = "1.0.0" }
embedded-io-async = { version = "0.7.0" }
embedded-can = { version = "0.4.1" }
embassy-embedded-hal = { version = "0.5.0" }

embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "defmt"] }

ector = { version = "0.8.0", default-features = false, features = ["time", "log" ] }
heapless = { version = "0.9.2" }

# Additional
embassy-usb = { version = "0.5.1", features = ["defmt", "max-interface-count-3"] }
static_cell = { version = "2.1.1" }

defmt = "1.0.1"
rtt-target = { version = "0.6.2", features = ["defmt"] }

cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
panic-probe = { version = "1.0.0", features = ["print-rtt"] }
futures = { version = "0.3.31", default-features = false, features = ["async-await"] }

# Peripherals
shared-bus = { version = "0.3.1", features = ["cortex-m"] }

[dev-dependencies]
embedded-test = { version = "0.7.0", features = ["embassy", "defmt"] }

[[test]]
name = "main"
harness = false

[patch.crates-io]
# Last working (no stacktraces, and panic in embassy-time): f58efe9c6297ede1e813d702f60d90745530cb51
#embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "7703f47c1ecac029f603033b7977d9a2becef48c" }
#embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "7703f47c1ecac029f603033b7977d9a2becef48c" }
#embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "7703f47c1ecac029f603033b7977d9a2becef48c" }
#embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "7703f47c1ecac029f603033b7977d9a2becef48c" }
#embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "7703f47c1ecac029f603033b7977d9a2becef48c" }
#embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "7703f47c1ecac029f603033b7977d9a2becef48c" }

# Current local embassy version - that simplifies embassy development.
# Embassy f09277b2a37cb77d3adf6675146c282fbcb9c955 worked with our ce7c39d339cf13feed0c4ec1ece9de3b0718121d (Jun 24)
# Currently working with b5ab3276dce7322e33946e974770fa91b98124a4
embassy-stm32 = { path = "/home/bla/_smarthome/embassy-fdcan/embassy-stm32" }
embassy-time = { path = "/home/bla/_smarthome/embassy-fdcan/embassy-time" }
embassy-futures = { path = "/home/bla/_smarthome/embassy-fdcan/embassy-futures" }
embassy-sync = { path = "/home/bla/_smarthome/embassy-fdcan/embassy-sync" }
embassy-usb = { path = "/home/bla/_smarthome/embassy-fdcan/embassy-usb" }
embassy-executor = { path = "/home/bla/_smarthome/embassy-fdcan/embassy-executor" }
embassy-embedded-hal = { path = "/home/bla/_smarthome/embassy-fdcan/embassy-embedded-hal" }
ector = { path = "/home/bla/_smarthome/_deps/ector/ector" }
ector-macros = { path = "/home/bla/_smarthome/_deps/ector/macros" }

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-
lto = 'fat'
